# postsrsd

./: .clang-format  .clang-format.license  .cmake-format.json  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CMakeLists.txt  CODE_OF_CONDUCT.md  README.exim.md  README.md  README.rst  README_UPGRADE.md  REUSE.toml  main.cf.ex  makefile  milter.c  postinstall.cmake.in  postsrsd-generate-secret.in  postsrsd.c  postsrsd.default  postsrsd.default.in  postsrsd.init.in  postsrsd.lsb_init.in  postsrsd.rh_init.in  postsrsd.service.in  postsrsd.upstart.in  run_postsrsd_tests.bats  sha1.c  srs2.c  srs2.h  tests.c
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bsd.yml  ci.yml  format.yml  linux.yml  musl.yml  nonlinux.yml  release.yml  solaris.yml
.reuse/: dep5
LICENSES/: BSD-3-Clause.txt  FSFAP.txt  FSFUL.txt
cmake/: AddAutotoolsDependency.cmake  FindCheck.cmake  FindConfuse.cmake  FindHiredis.cmake  FindLibMilter.cmake  Findlibconfuse.cmake  Findseccomp.cmake  Findsqlite3.cmake  utils.cmake
data/: postsrsd.conf.in  postsrsd.service.in  sysusers.conf.in
doc/: packaging.rst  postsrsd.conf
init/: postsrsd-systemd-launcher.in  postsrsd.apparmor.in  postsrsd.default.in  postsrsd.socket.in  postsrsd.systemd.in  postsrsd.sysv-lsb.in  postsrsd.sysv-redhat.in  postsrsd.upstart.in
misc/libconfuse/: config.h.in
selinux/: postsrsd.fc  postsrsd.te
src/: config.c  config.h  database.c  database.h  endpoint.c  endpoint.h  main.c  milter.c  milter.h  netstring.c  netstring.h  postsrsd_build_config.h.in  sha1.c  sha1.h  srs.c  srs.h  srs2.c  srs2.h  util.c  util.h
tests/: CMakeLists.txt  common.h  test_database.c  test_netstring.c  test_sha1.c  test_util.c
tests/blackbox/: CMakeLists.txt  blackbox.py  inotify.py  milter.py  reload.py  socketmap.py  test_socketmap.bats.in  testhelper.py
tests/unit/: CMakeLists.txt  common.h  test_config.c  test_database.c  test_milter.c  test_netstring.c  test_sha1.c  test_srs2.c  test_util.c
